# CCalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: error.hpp  main.cpp  types.hpp  util.hpp  version.hpp
src/ast/: ast.cpp  ast.h  bnode.cpp  bnode.h  mnode.cpp  mnode.h  node.cpp  node.h
src/engine/: engine.cpp  engine.h  signal.cpp  signal.h
src/error/: error.cpp  error.h  error.hpp
src/file/: file.cpp  file.h
src/include/: error.hpp  types.hpp  util.hpp
src/parser/: boolparse.cpp  boolparse.h  mathparse.cpp  mathparse.h  parser.cpp  parser.h
src/startup/: startup.cpp  startup.h
src/types/: types.cpp  types.hpp
src/ui/: ui.cpp  ui.h
